<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewBinder"
            type="com.png.interview.weather.ui.binder.SettingsFragmentViewBinder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            style="@style/TextViewHeader"
            android:id="@+id/tv_settings_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/TextViewBoldLabelStyle"
            android:id="@+id/tv_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_label"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/rd_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:dividerPadding="8dp"
            android:showDividers="middle"
            android:checkedButton="@{viewBinder.checkedButton}"
            app:layout_constraintTop_toTopOf="@id/tv_units"
            app:layout_constraintStart_toEndOf="@id/tv_units"
            app:layout_constraintBottom_toBottomOf="@id/tv_units"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rb_imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial"
                android:onClick="@{viewBinder.onImperialSelected}" />

            <RadioButton
                android:id="@+id/rb_metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric"
                android:onClick="@{viewBinder.onMetricSelected}" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>