<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forecastWeatherData"
            type="com.png.interview.weather.ui.model.ForecastWeatherData" />
    </data>

    <androidx.cardview.widget.CardView
        style="@style/CardViewStyle"
        android:id="@+id/card_forecast_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                style="@style/TextViewBoldLabelStyle"
                android:id="@+id/tv_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                style="@style/TextViewBoldValueStyle"
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{forecastWeatherData.date}"
                app:layout_constraintTop_toTopOf="@id/tv_date_label"
                app:layout_constraintBottom_toBottomOf="@id/tv_date_label"
                app:layout_constraintStart_toEndOf="@id/tv_date_label"
                tools:text="2021-08-05" />

            <TextView
                style="@style/TextViewLabelStyle"
                android:id="@+id/tv_min_temp_label"
                android:text="@string/min_temp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_label" />

            <TextView
                style="@style/TextViewValueStyle"
                android:id="@+id/tv_min_temp_value"
                android:text="@{forecastWeatherData.minTemp}"
                app:layout_constraintStart_toEndOf="@id/tv_min_temp_label"
                app:layout_constraintTop_toTopOf="@id/tv_min_temp_label"
                app:layout_constraintBottom_toBottomOf="@id/tv_min_temp_label"
                tools:text="78.2F" />

            <TextView
                style="@style/TextViewLabelStyle"
                android:id="@+id/tv_max_temp_label"
                android:text="@string/max_temp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_min_temp_label" />

            <TextView
                style="@style/TextViewValueStyle"
                android:id="@+id/tv_max_temp_value"
                android:text="@{forecastWeatherData.maxTemp}"
                app:layout_constraintStart_toEndOf="@id/tv_max_temp_label"
                app:layout_constraintTop_toTopOf="@id/tv_max_temp_label"
                app:layout_constraintBottom_toBottomOf="@id/tv_max_temp_label"
                tools:text="95.1F" />

            <TextView
                style="@style/TextViewLabelStyle"
                android:id="@+id/tv_wind_speed_label"
                android:text="@string/wind_speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_max_temp_label" />

            <TextView
                style="@style/TextViewValueStyle"
                android:id="@+id/tv_wind_speed_value"
                android:text="@{forecastWeatherData.windSpeed}"
                app:layout_constraintStart_toEndOf="@id/tv_wind_speed_label"
                app:layout_constraintTop_toTopOf="@id/tv_wind_speed_label"
                app:layout_constraintBottom_toBottomOf="@id/tv_wind_speed_label"
                tools:text="6.5 MPH" />

            <TextView
                style="@style/TextViewLabelStyle"
                android:id="@+id/tv_condition"
                android:text="@string/condition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_wind_speed_label" />

            <TextView
                style="@style/TextViewValueStyle"
                android:id="@+id/tv_condition_value"
                android:text="@{forecastWeatherData.condition}"
                app:layout_constraintStart_toEndOf="@id/tv_condition"
                app:layout_constraintTop_toTopOf="@id/tv_condition"
                app:layout_constraintBottom_toBottomOf="@id/tv_condition"
                tools:text="Partly Cloudy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>